--- a/template.tex
+++ b/template.tex
@@ -1,12 +1,11 @@
 \documentclass{vc}
 
 \pagestyle{empty}
-\topmargin=-2cm
-\textwidth=18cm
-\textheight=25.5cm
-\oddsidemargin=-10mm
-\evensidemargin=-10mm
-\renewcommand{\baselinestretch}{1.0}
+\setlength{\topmargin}{-2cm}
+\setlength{\textwidth}{18cm}
+\setlength{\textheight}{25.5cm}
+\setlength{\oddsidemargin}{-10mm}
+\setlength{\evensidemargin}{-10mm}
 \setlength{\columnsep}{6mm}
 \usepackage{color}
 \newcommand{\red}[1]{\textcolor{red}{#1}}
