Add copyright notice

--- a/vc.cls
+++ b/vc.cls
@@ -1,3 +1,10 @@
+%%
+%% ``vc.cls'' is a paper template class for visual computing (VC) symposiums.
+%%
+%% Copyright 2021 Yuki Koyama
+%%
+%% This class file is distributed under the MIT License.
+%%
 \ProvidesClass{vc}[2021/02/24]
 
 \LoadClass[]{jarticle}
