Remove custom warning command

--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,5 @@
 \documentclass{vc}
 
-\usepackage{color}
-\newcommand{\red}[1]{\textcolor{red}{#1}}
 \begin{document}
 
 \twocolumn[
@@ -26,9 +24,9 @@ E-mail: $\dagger${}hanako@gazo.ac.jp, $\ddagger${}\{taro, saburo\}@denshi.co.jp
 
 募集するカテゴリは，論文（査読有り，口頭発表）とポスター（査読無し）の2つです．
 
-\red{論文に著者名，所属，謝辞などは書かないでください．WordからPDFを作成した場合，文書のプロパティに著者を特定できる情報が入ることがありますが，そのような情報は削除してください．}
+論文に著者名，所属，謝辞などは書かないでください．WordからPDFを作成した場合，文書のプロパティに著者を特定できる情報が入ることがありますが，そのような情報は削除してください．
 
-\red{論文は締切前であれば何度でもアップロードできます．締切を過ぎた投稿は受け付けませんので，時間に余裕を持って投稿してください．}
+論文は締切前であれば何度でもアップロードできます．締切を過ぎた投稿は受け付けませんので，時間に余裕を持って投稿してください．
 
 
 \section{論文（査読有り，口頭発表）}
