--- a/template.tex
+++ b/template.tex
@@ -1,22 +1,32 @@
 \documentclass{vc}
 
+\title{Visual Computing発表募集}
+
+\begin{abstract}
+  コンピュータ・グラフィックス(CG)，及び，CGの周辺分野における革新的な技術の発表を募集します．
+  創造的，独創的な学術的成果をはじめ，CG技術の新しい使い方や実用例などの応用的成果まで，未来のCG業界を刺激する幅広い投稿をお待ちしております．
+\end{abstract}
+
+\usepackage{tabularx}
+\author{%
+  {\large%
+    \begin{tabularx}{.8\textwidth}{*3{>{\centering\arraybackslash}X}}
+      画像 花子$^\dagger$ & 電子 太郎$^\ddagger$ & 学会 三郎$^\ddagger$
+    \end{tabularx}
+  }
+  \\
+  \begin{tabular}{cc}
+    $\dagger$画像大学工学部 & $\ddagger$画像株式会社開発部
+  \end{tabular}
+  \\
+  \begin{tabular}{c}
+    E-mail: $\dagger${}hanako@gazo.ac.jp, $\ddagger${}\{taro, saburo\}@denshi.co.jp
+  \end{tabular}
+}
+
 \begin{document}
 
-\twocolumn[
-\begin{center}
-\LARGE
-VC発表募集（タイトル）\\
-\large
-\vspace{2mm}
-{\hbox to 0.8\textwidth {
-\mbox{画像 花子$\dagger$} \mbox{電子 太郎$\ddagger$} \mbox{学会 三郎$\ddagger$}}}
-\vspace{2mm}
-\begin{tabular}{ll}
-$\dagger$画像大学工学部  &  $\ddagger$画像株式会社開発部
-\end{tabular}\\
-E-mail: $\dagger${}hanako@gazo.ac.jp, $\ddagger${}\{taro, saburo\}@denshi.co.jp
-\end{center}
-]
+\maketitle
 
 \section{はじめに}
 コンピュータ・グラフィックス(CG)，及び，CGの周辺分野における革新的な技術の発表を募集します．
