--- a/template.tex
+++ b/template.tex
@@ -24,6 +24,12 @@
   \end{tabular}
 }
 
+\teaser{%
+  \includegraphics[width=\textwidth]{./figures/leica.pdf}
+  \captionof{figure}{ティザー画像のキャプション.}
+  \label{fig:teaser}
+}
+
 \begin{document}
 
 \maketitle
