Use environment rather than command

--- a/template.tex
+++ b/template.tex
@@ -24,11 +24,11 @@
   \end{tabular}
 }
 
-\teaser{%
+\begin{teaser}
   \includegraphics[width=\textwidth]{./figures/leica.pdf}
   \captionof{figure}{ティザー画像のキャプション.}
   \label{fig:teaser}
-}
+\end{teaser}
 
 \begin{document}
 
