--- a/template.bib
+++ b/template.bib
@@ -1,17 +1,18 @@
+
+
 @article{GSC12,
- author = {Y. Gingold and A. Shamir and D. Cohen-Or},
- title = {Micro Perceptual Human Computation for Visual Tasks},
- journal = {ACM Trans. Graph.},
- volume = {31},
- number = {5},
- year = {2012},
- pages = {119:1-–119:12},
-} 
+	author = {Gingold, Y. and Shamir, A. and Cohen-Or, D.},
+	date-modified = {2021-02-25 16:10:16 +0900},
+	journal = {ACM Trans. Graph.},
+	number = {5},
+	pages = {119:1--119:12},
+	title = {Micro Perceptual Human Computation for Visual Tasks},
+	volume = {31},
+	year = {2012}}
 
 @inproceedings{WL00,
- author = {Li-Yi Wei and Marc Levoy},
- title = {Fast texture synthesis using tree-structured vector quantization},
- booktitle = {Proc. SIGGRAPH 2000},
- pages = {479--488},
- year = {2000},
-}
+	author = {Wei, Li-Yi and Levoy, Marc},
+	booktitle = {Proc. SIGGRAPH 2000},
+	pages = {479--488},
+	title = {Fast texture synthesis using tree-structured vector quantization},
+	year = {2000}}
