Change teaser figure env name

--- a/template.tex
+++ b/template.tex
@@ -24,11 +24,12 @@
   \end{tabular}
 }
 
-\begin{teaser}
+\begin{teaserfigure}
+  \centering
   \includegraphics[width=\textwidth]{./figures/leica.pdf}
   \captionof{figure}{ティザー画像のキャプション.}
   \label{fig:teaser}
-\end{teaser}
+\end{teaserfigure}
 
 \begin{document}
 
