Add an example of inserting URLs

--- a/template.tex
+++ b/template.tex
@@ -73,6 +73,7 @@
 などのように記述する.
 画像は\autoref{fig:teaser}などのように参照する.
 参考文献は \cite{GSC12,WL00} などのように参照する.
+URLは\url{https://www.siggraph.org/}のように記載する.
 
 \small
 \bibliographystyle{IEEEtran}
