--- a/template.tex
+++ b/template.tex
@@ -60,19 +60,23 @@
 完成された研究のみならず，新しいアイデア，進行中の研究紹介など，さまざまな性格の発表を募集します．VCのポスターでは，「既存技術について，自分の頭で考え直したこと」もオリジナリティであるとして発表を歓迎します．優秀なポスターについてはVCポスター賞を授与します．
 
 \section{テンプレートの使用例}
+\label{sec:template}
 
-インライン数式は $\mathbf{x} \in \mathbb{R}^{n}$ のように記述する.
+インライン数式は$\mathbf{x} \in \mathbb{R}^{n}$のように記述する.
 ディスプレイ数式は
 \begin{align}
   \mathbf{A} \mathbf{x} = \mathbf{b}
+  \label{eq:linear_system}
 \end{align}
 や
 \begin{align}
   \mathbf{x}^{*} = \mathop{\text{arg max}}_{\mathbf{x} \in \mathcal{X}} f(\mathbf{x})
 \end{align}
 などのように記述する.
-画像は\autoref{fig:teaser}などのように参照する.
-参考文献は \cite{GSC12,WL00} などのように参照する.
+式は\autoref{eq:linear_system}などのように参照する.
+図は\autoref{fig:teaser}などのように参照する.
+セクションは\autoref{sec:template}などのように参照する.
+参考文献は\cite{GSC12,WL00}などのように参照する.
 URLは\url{https://www.siggraph.org/}のように記載する.
 
 \small
