--- a/template.tex
+++ b/template.tex
@@ -73,7 +73,7 @@
   \mathbf{x}^{*} = \mathop{\text{arg max}}_{\mathbf{x} \in \mathcal{X}} f(\mathbf{x})
 \end{align}
 などのように記述する.
-式は\autoref{eq:linear_system}などのように参照する.
+数式は\autoref{eq:linear_system}などのように参照する.
 図は\autoref{fig:teaser}などのように参照する.
 セクションは\autoref{sec:template}などのように参照する.
 参考文献は\cite{GSC12,WL00}などのように参照する.
