Use natbib and improve the reference style spec, which resolves #9

--- a/vc.cls
+++ b/vc.cls
@@ -47,6 +47,11 @@
 \renewcommand{\subsectionautorefname}{\S}
 \renewcommand{\subsubsectionautorefname}{\S}
 
+% 参考文献のスタイル設定
+
+\RequirePackage[square,sort,comma,numbers]{natbib}
+\renewcommand*{\bibfont}{\small}
+
 % 環境の定義
 
 \renewenvironment{abstract}{\Collect@Body\@saveabstract}{}
