Add a figure example, which closes #5

--- a/template.tex
+++ b/template.tex
@@ -74,10 +74,17 @@
 \end{align}
 などのように記述する.
 数式は\autoref{eq:linear_system}などのように参照する.
-図は\autoref{fig:teaser}などのように参照する.
+図は\autoref{fig:teaser}や\autoref{fig:leica}などのように参照する.
 セクションは\autoref{sec:template}などのように参照する.
 参考文献は\cite{GSC12,WL00}などのように参照する.
 URLは\url{https://www.siggraph.org/}のように記載する.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=\columnwidth]{./figures/leica.pdf}
+  \caption{図のキャプションをここに記述する.}
+  \label{fig:leica}
+\end{figure}
 
 \bibliographystyle{IEEEtran}
 \bibliography{template.bib}
