--- a/template.tex
+++ b/template.tex
@@ -75,6 +75,7 @@
 などのように記述する.
 数式は\autoref{eq:linear_system}などのように参照する.
 図は\autoref{fig:teaser}や\autoref{fig:leica}などのように参照する.
+表は\autoref{tab:accuracy}などのように参照する.
 セクションは\autoref{sec:template}などのように参照する.
 参考文献は\cite{GSC12,WL00}などのように参照する.
 URLは\url{https://www.siggraph.org/}のように記載する.
@@ -85,6 +86,23 @@ URLは\url{https://www.siggraph.org/}のように記載する.
   \caption{図のキャプションをここに記述する.}
   \label{fig:leica}
 \end{figure}
+
+\begin{table}
+  \centering
+  \caption{表のキャプションをここに記述する.}
+  \label{tab:accuracy}
+  \begin{tabular}{@{}rrrr@{}}
+    \toprule
+    & Our method & XXX et al. & YYY et al. \\
+    \midrule
+    Case 1 & \textbf{95.4\%} &         91.2\%  & 92.4\% \\
+    Case 2 & \textbf{97.5\%} &         92.1\%  & 91.2\% \\
+    Case 3 &         90.3\%  & \textbf{90.9\%} & 82.5\% \\
+    \midrule
+    Mean   & \textbf{94.4\%} &         91.4\%  & 88.7\% \\
+    \bottomrule
+  \end{tabular}
+\end{table}
 
 \bibliographystyle{IEEEtran}
 \bibliography{template.bib}
