Add ref about cross ref

--- a/template.bib
+++ b/template.bib
@@ -1,5 +1,10 @@
 
 
+@webpage{Wikibooks:LaTeX:Ref,
+	note = {Last checked: 2021-03-07},
+	title = {LaTeX/Labels and Cross-referencing - Wikibooks, open books for an open world},
+	url = {https://en.wikibooks.org/wiki/LaTeX/Labels_and_Cross-referencing}}
+
 @article{GSC12,
 	author = {Gingold, Y. and Shamir, A. and Cohen-Or, D.},
 	date-modified = {2021-02-25 16:10:16 +0900},
