--- a/template.tex
+++ b/template.tex
@@ -62,13 +62,16 @@
 \section{テンプレートの使用例}
 \label{sec:template}
 
+本テンプレートを用いて原稿の本文を記述する際の例を下記に示す.
+なお表の詳細なフォーマットや参照に用いるコマンド\footnote{ここでは\textsf{hyperref}パッケージが提供する\textsf{autoref}コマンド\cite{Wikibooks:LaTeX:Ref}を利用している.}などは厳密に従う必要はない.
+
 インライン数式は$\mathbf{x} \in \mathbb{R}^{n}$のように記述する.
 ディスプレイ数式は
 \begin{align}
   \mathbf{A} \mathbf{x} = \mathbf{b}
   \label{eq:linear_system}
 \end{align}
-や
+や, あるいは
 \begin{align}
   \mathbf{x}^{*} = \mathop{\text{arg max}}_{\mathbf{x} \in \mathcal{X}} f(\mathbf{x})
 \end{align}
