Create a teaser caption command

--- a/template.tex
+++ b/template.tex
@@ -27,7 +27,7 @@
 \begin{teaserfigure}
   \centering
   \includegraphics[width=\textwidth]{./figures/leica.pdf}
-  \captionof{figure}{ティザー画像のキャプションをここに記述する.}
+  \teasercaption{ティザー画像のキャプションをここに記述する.}
   \label{fig:teaser}
 \end{teaserfigure}
 
