Remove caption package since it generates warnings, which closes #8

--- a/template.tex
+++ b/template.tex
@@ -115,12 +115,12 @@ URLは\url{https://www.siggraph.org/}のように記載する.
 \begin{itemize}
   \item \textsf{url}
   \item \textsf{hyperref}
+  \item \textsf{hypcap}
   \item \textsf{booktabs}
   \item \textsf{graphicx}
   \item \textsf{xcolor}
   \item \textsf{amsmath}
   \item \textsf{amssymb}
-  \item \textsf{caption}
   \item \textsf{bxpapersize}
   \item \textsf{environ}
   \item \textsf{natbib}
