Add support of PDF meta data, which closes #14

--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,7 @@
 \documentclass{vc}
 
 \title{Visual Computing論文テンプレート}
+\plainauthors{画像 花子, 電子 太郎, 学会 三郎}
 
 \begin{authors}
   % 固定幅かつセンタリングのカラム "C" の定義（幅は著者数や文字数に応じて各自調整する）
