Edit detailed instructions

--- a/template.tex
+++ b/template.tex
@@ -148,7 +148,7 @@ Overleafで使用する場合, \autoref{fig:overleaf}のように``New Project''
   \item \textsf{natbib}
 \end{itemize}
 
-なお, 本テンプレートはGitHub\footnote{\url{https://github.com/visual-computing-symposium/paper-template}}上で管理されている.
+本テンプレートはGitHub\footnote{\url{https://github.com/visual-computing-symposium/paper-template}}上で管理されている.
 バグ報告や改善提案などはGitHubを通して誰でも行うことができる.
 
 \bibliographystyle{IEEEtran}
