Fix a bug about hiding the abstract

--- a/template.tex
+++ b/template.tex
@@ -145,6 +145,7 @@ Overleafで使用する場合, \autoref{fig:overleaf}のように``New Project''
   \item \textsf{array}
   \item \textsf{bxpapersize}
   \item \textsf{environ}
+  \item \textsf{xstring}
   \item \textsf{natbib}
 \end{itemize}
 
