Change the abstract position

--- a/template.tex
+++ b/template.tex
@@ -32,7 +32,7 @@
   \end{tabular}
 \end{emails}
 
-% 概要の定義（最初のページの上部に出力される）
+% 概要の定義（最初のページのタイトルの直後に出力される）
 \begin{abstract}
   これはコンピュータグラフィクス及びその周辺分野における技術に関する学術シンポジウムVisual Computingへの投稿原稿を執筆するためのテンプレートファイルである.
 \end{abstract}
