Update overleaf instruction

--- a/template.tex
+++ b/template.tex
@@ -142,11 +142,12 @@ URLは\url{https://www.siggraph.org/}のように記載する.
 \subsection{Overleaf環境での使用}
 
 本テンプレートはローカル環境での使用に加えてオンライン環境の一つであるOverleaf\footnote{\url{https://www.overleaf.com/}}での使用もサポートしている.
-Overleafで使用する場合, \cref{fig:overleaf}のように``New Project''メニュー下にある``Upload Project''項目を選択\footnote{ここでは2021年3月時点でのユーザインタフェースに基づき説明している.}し, 予めダウンロードしておいた本テンプレートのZIPファイルをアップロードする.
+Overleafで使用する場合, まず``New Project''メニュー下にある``Upload Project''項目を選択\footnote{ここでは2021年3月時点でのユーザインタフェースに基づき説明している.}し, 予めダウンロードしておいた本テンプレートのZIPファイルをアップロードする(\cref{fig:overleaf}, 左).
+続いて, ``Menu''の``Settings''欄の``Compiler''の値について, デフォルトでは{pdfLaTeX}となっているところを, LaTeXあるいはLuaLaTeXへと変更する(\cref{fig:overleaf}, 右).
 
 \begin{figure}
   \centering
-  \includegraphics[width=.5\columnwidth]{./figures/overleaf.pdf}
+  \includegraphics[width=\columnwidth]{./figures/overleaf.pdf}
   \caption{Overleafで本テンプレートを使用する際の手続き.}
   \label{fig:overleaf}
 \end{figure}
