Adjust title spacing

--- a/template.tex
+++ b/template.tex
@@ -123,7 +123,8 @@ URLは\url{https://www.siggraph.org/}のように記載する.
 \textsf{array},
 \textsf{natbib},
 \textsf{bxpapersize},
-\textsf{environ}.
+\textsf{environ},
+\textsf{titlesec}.
 
 \subsection{投稿時の著者情報の削除}
 
